<resources>
    <string name="app_name">WellPlayed</string>
    <string name="Bienvenido">¡Bienvenido a WellPlayed!</string>
    <string name="hello_blank_fragment" />
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="has_olvidado_la_contrase_a">¿Has olvidado la contraseña?</string>
    <string name="iniciar_sesi_n_con_google">Iniciar sesión con google</string>
    <string name="iniciar_sesi_n_con_facebook">Iniciar sesión con Facebook</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="no_tienes_cuenta_registrate_aqui">¿No tienes cuenta? Registrate aqui</string>
    <string name="registrate_para_jugar_a_los_mejores_torneos_competitivos_de_tus_juegos_favoritos">Registrate para jugar a los mejores torneos competitivos de tus juegos favoritos!</string>
    <string name="emailRestart">Email</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="fecha_nacimiento">Fecha nacimiento</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="tienes_cuenta_entra_aqui">¿Tienes cuenta? entra aqui</string>
    <string name="crear_equipo_nombre">Nombre equipo:</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="from">from</string>
    <string name="btn_UnirseEquipo">Unirse a un equipo</string>
    <string name="btn_UnirsePartido">Unirse a un partido</string>
    <string name="lblNoTienesEquipo">Hemos visto que aún no tienes equipo </string>
    <string name="lblNoHayPartidos">Aún no hay ningún partido publicado.</string>
    <string name="lblDeseasUnirteEquipo">¿Deseas unirte a un equipo?</string>
    <string name="btn_CrearEquipo">Crear equipo</string>
    <string name="btn_EliminarEquipo">Eliminar equipo</string>
    <string name="btn_SalirEquipo">Salir del equipo</string>
    <string name="lblWin_rate">Win rate</string>
    <string name="lblVictorias">Victoria</string>
    <string name="lblDerrota">Derrota</string>
    <string name="btn_EliminarJuego">Eliminar juego</string>
    <string name="SpinnerJuego">Juegos</string>
    <string name="lblEliminarUsuario">¿Desea eliminar el usuario de este equipo?</string>
    <string name="lblUnirsePartido">¿Desea unirse a este partido?</string>
    <string name="lblSi">Si</string>
    <string name="lblNo">No</string>
    <string name="lblMiembros">Miembros</string>
    <string name="lblMaxMiembros">/ 7</string>
    <string name="mnuInicio">Inicio</string>
    <string name="mnuPerfil">Perfil</string>
    <string name="mnuMisJuegos">Mis Juegos</string>
    <string name="mnuMisEquipos">Mis Equipos</string>
    <string name="mnuMisPartidos">Mis Partidos</string>
    <string name="mnuSoporte">Soporte</string>
    <string name="mnuAjustes">Ajustes</string>
    <string name="mnuCerrarSesion">Cerrar sesión</string>
    <string name="mnuUnirseEquipo">Unirse a equipo</string>
    <string name="mnuUnirsePartidos">Unirse a partido</string>
    <string name="mnuCrearEquipo">Crear equipo</string>
    <string name="mnuAddJuego">Añadir juego</string>
    <string name="mnuTienda">Tienda</string>
    <string name="mnuPeticiones">Peticiones</string>
    <string name="lblCuenta">Cuenta</string>
    <string name="lblInformacion">Información</string>
    <string name="swBtnTema">Tema Claro/Oscuro</string>
    <string name="lblNombreUsuarioUPD">Cambiar nombre de usuario</string>
    <string name="lblPassword">Cambiar contraseña</string>
    <string name="lblPassword2">Confirmar contraseña</string>
    <string name="CheckBox_LOL">League of Legends</string>
    <string name="CheckBox_Valorant">Valorant</string>
    <string name="CheckBox_FIFA">FIFA</string>
    <string name="CheckBox_CSGO">Counter Strike</string>
    <string name="addticket">Añadir un ticket</string>
    <string name="txtTienda">Tienda</string>
    <string name="logos">Logos</string>
    <string name="email">Email</string>
    <string name="restablecer_contrase_a">Restablecer contraseña</string>
    <string name="le_enviaremos_un_correo_para_restablecer_la_contrase_a_de_su_cuenta">Le enviaremos un correo para restablecer la contraseña de su cuenta</string>
    <string name="mantener_sesi_n_iniciada">Mantener sesión iniciada</string>
    <string name="lblComprarProductos">¿Estas seguro de que quieres comprar este producto?</string>
    <string name="actualizar_perfil">Actualizar perfil</string>
    <string name="textadjuntarimagen">Pulse aquí para añadir una imagen o arrastrala</string>
    <string name="mandar_ticket">mandar ticket</string>
    <string name="mensaje">Mensaje</string>
    <string name="btnMandar_mensaje">Mandar mensaje</string>
    <string-array name="productos">
        <item>Avatares</item>
        <item>Banners</item>
    </string-array>
    <string-array name="juegos">
        <item>LOL</item>
        <item>Valorant</item>
        <item>CSGO</item>
        <item>FIFA</item>
    </string-array>
</resources>