<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoapp"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="142dp"
        android:layout_height="127dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wellplayed" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="45dp"
        android:layout_height="44dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/txtPassword"
        app:layout_constraintTop_toBottomOf="@+id/imgUser"
        app:srcCompat="@android:drawable/ic_lock_idle_lock" />

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="45dp"
        android:layout_height="44dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/txtUsuario"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/lblOlvidarContrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/has_olvidado_la_contrase_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <Button
        android:id="@+id/btnIniciarSesionGoogle"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/iconosapp"
        android:text="@string/iniciar_sesi_n_con_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblOlvidarContrasenia" />

    <Button
        android:id="@+id/btnIniciarSesionFacebook"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/iconosapp"
        android:text="@string/iniciar_sesi_n_con_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesionGoogle" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/iniciar_sesi_n"
        android:backgroundTint="@color/iconosapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesionFacebook" />

    <TextView
        android:id="@+id/lblRegistrateAqui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/no_tienes_cuenta_registrate_aqui"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesion" />

</androidx.constraintlayout.widget.ConstraintLayout>