<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:background="@color/GrisApp">

    <TextView
        android:id="@+id/lblEliminarUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin"
        android:text="@string/lblEliminarUsuario"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSiEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:backgroundTint="@color/AmarilloApp"
        android:text="@string/lblSi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lblEliminarUsuario"
        app:layout_constraintTop_toBottomOf="@+id/lblEliminarUsuario" />

    <Button
        android:id="@+id/btnNoEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/AmarilloApp"
        android:text="@string/lblNo"
        app:layout_constraintBottom_toBottomOf="@+id/btnSiEliminar"
        app:layout_constraintEnd_toEndOf="@+id/lblEliminarUsuario"
        app:layout_constraintTop_toTopOf="@+id/btnSiEliminar" />

</androidx.constraintlayout.widget.ConstraintLayout>